--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = deps/tinycc
 	url = git@github.com:promovicz/tinycc.git
 	branch = promovicz/mob
+[submodule "deps/bdwgc"]
+	path = deps/bdwgc
+	url = https://github.com/ivmai/bdwgc.git
