Enable BDWGC by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ set(DEPBLD ${CMAKE_BINARY_DIR}/depbld)
 set(STAGE ${CMAKE_BINARY_DIR}/stage)
 
 # build BDW garbage collector
-option(CPLR_ENABLE_BDWGC "Enable BDW garbage collector" OFF)
+option(CPLR_ENABLE_BDWGC "Enable BDW garbage collector" ON)
 if(CPLR_ENABLE_BDWGC)
   set(BDWGC_SOURCE_DIR ${CMAKE_SOURCE_DIR}/deps/bdwgc)
   ExternalProject_Add(bdwgc
@@ -23,8 +23,8 @@ if(CPLR_ENABLE_BDWGC)
     SOURCE_DIR ${BDWGC_SOURCE_DIR}
     DOWNLOAD_COMMAND true
     PATCH_COMMAND autoreconf -vi ${BDWGC_SOURCE_DIR}
-    CONFIGURE_COMMAND ${BDWGC_SOURCE_DIR}/configure --prefix=/bdwgc --enable-static --disable-shared --enable-replace-malloc
-    BUILD_COMMAND make clean && make all
+    CONFIGURE_COMMAND ${BDWGC_SOURCE_DIR}/configure --prefix=/bdwgc --enable-static --disable-shared --enable-replace-malloc && make clean
+    BUILD_COMMAND make all
     INSTALL_COMMAND make install DESTDIR=${STAGE}
     )
   set(BDWGC_INCLUDE_DIRS ${STAGE}/bdwgc/include)
@@ -43,8 +43,8 @@ if(CPLR_ENABLE_TINYCC)
       PREFIX ${DEPBLD}
       SOURCE_DIR ${TINYCC_SOURCE_DIR}
       DOWNLOAD_COMMAND true
-      CONFIGURE_COMMAND ${TINYCC_SOURCE_DIR}/configure --prefix=/tinycc --enable-static
-      BUILD_COMMAND make clean && make all
+      CONFIGURE_COMMAND ${TINYCC_SOURCE_DIR}/configure --prefix=/tinycc --enable-static && make clean
+      BUILD_COMMAND make all
       INSTALL_COMMAND make install DESTDIR=${STAGE}
       )
     set(LIBTCC_INCLUDE_DIRS ${STAGE}/tinycc/include)
